--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -66,12 +66,10 @@ body {
 }
 
 .card {
-    display: inline-block;
-    margin: 30px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
-    transition: 0.4s;
-    width: 10%;
     text-align: center;
+    align-content: center;
+    display: inline;
+    margin: 20px;
 }
 
 .card2 {
