--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -175,6 +175,19 @@ img {
     float: left;
 }
 
+.layer{
+    text-align: center;
+    text-decoration-color: white;
+    background-color: #efefef;
+    background-size: cover;
+    overflow: inherit;
+    margin: 0;
+    padding: 1px 20px;
+    color: white;
+    width: 100%;
+    font-family: "Verdana";
+}
+
 .more-info {
     font: Georgia;
     display: inline-block;
